--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul> 
+          <li>The head element contains information about the webpage</li>
+          <li>The body element contains the visibile content the user will use</li>
+          <li>There are 6 tiers of heading 1-6</li>
+          <li>The h1 heading should be used only once on a webpage</li>
+          <li>lists can be ordered or unordered</li>
+        </ul>
+        </section>
+      <section class="card" id="css-section">
+        <h2>Cascading Style Sheets</h2>
+        <ul>
+          <li>enter notes here!</li>
+        </ul>
+        </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status : check what branch you are on</li>
+          <li> git checkout-b branch-name :make new branch and travel to it </li>
+          <li> more notes! </li>
+        </ul>
+        </section>
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li> Notes go here buddy</li>
+        </ul>
+        </section>
     </main>
 
     <footer>
