added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -25,7 +26,15 @@
       <section class="card" id="css-section">
         <h2>Cascading Style Sheets</h2>
         <ul>
-          <li>enter notes here!</li>
+          <li>A margin indicates the space around the <b>outside</b> of an element.</li>
+          <li>Padding indicates the space around the outside of the content <b>inside</b> an element.</li>
+          <li>There are 3 kinds of CSS: Inline, internal css and external css</li>
+          <li>Inline is written within the HTML is quick instant and permanant but must all be updated individually if you want to make changes</li>
+          <li>internal Css the css code is written directly in to the head of a document and allows for classes and ID's making it more flexible</li>
+          <li> External CSS is written on a seperate .css sheet and a link is placed in the head of the html, this makes it easier to access and update and keeps code with different functions seperate. </li>
+          <li> * is a univeral css selector, everything under this selector will beaffectedby the rules/declarations</li>
+          <li>selector defines the element or attributed to be targeted</li> 
+          <li>Declarations contain the property to be applied and the value eg: colour:red</li>
         </ul>
         </section>
       <section class="card" id="git-section">
