--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li> Notes go here buddy</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+            <li>Javascript can be used for 2d and 3d raphics, games and database driven apps </li>
+            <li>When we declare a function in our JavaScript code, we are creating a reusable block of code that performs a specific task</li>
+            <li>more notes here pal</li>
         </ul>
         </section>
     </main>
